Added some color and improved navigation

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,31 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width,
-        initial-scale=1.0"
-    />
-    <title>Document</title>
-  </head>
 
-  <body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width,
+        initial-scale=1.0" />
+  <title>File Upload App</title>
+</head>
+
+<body>
+  <div style="border-style: double; 
+  background-color: darkturquoise;">
+    <a style="margin-top: .5rem;
+    margin-bottom: 1 rem; 
+    margin-right: .25rem;
+    margin-left: .25rem;
+    background-color: blue; 
+    border-radius: 25px;
+    position: relative; 
+    display: block; 
+    text-align: center; 
+    color:white; 
+    text-decoration:none"
+      href="/">
+      Home</a>
+    </a>
+
     <% if (locals.fileLink !=null){ %>
-<div style="margin-bottom: 1 rem;">
-  Your File is uploaded!
-  <a href="<%= locals.fileLink %>"><%= locals.fileLink %></a>
-</div>
-    <% } %>
+      <div style="margin-bottom: 1 rem">
+        Your File is uploaded!
+        <a href="<%= locals.fileLink %>">
+          <%= locals.fileLink %>
+        </a>
+      </div>
+      <% } %>
 
+        <form action="/upload" method="post" enctype="multipart/form-data" style="
+        display: grid;
+        gap: 0.5rem;
+        grid-template-columns: auto 1fr;
+        max-width: 500px;
+        margin: 0 auto;
+        margin-top: 25px;
+        margin-bottom: 25px;
+        
+      ">
+          <label for="file">File: </label>
+          <input type="file" id="file" name="file" required />
+          <label for="password">Password: </label>
+          <input type="password" id="password" name="password" />
+          <button style="grid-column: span 2" type="submit">Share</button>
+        </form>
+  </div>
+</body>
 
-    <form action="/upload" method="post" enctype="multipart/form-data" style="display: grid; gap: .5rem; grid-template-columns: auto 1fr; max-width: 500px; margin: 0 auto;">
-      <label for="file">File: </label>
-      <input type="file" id="file" name="file" required />
-      <label for="password">Password: </label>
-      <input type="password" id="password" name="password"  />
-      <button style="grid-column: span 2 ;" type="submit">Share</button>
-    </form>
-  </body>
 </html>
