--- a/views/password.ejs
+++ b/views/password.ejs
@@ -12,17 +12,47 @@
   </head>
 
   <body>
+
+    <div style="border-style: double; 
+    background-color: darkturquoise;">
+      <a style="margin-top: .5rem;
+      margin-bottom: 1 rem; 
+      margin-right: .25rem;
+      margin-left: .25rem;
+      background-color: blue; 
+      border-radius: 25px;
+      position: relative; 
+      display: block; 
+      text-align: center; 
+      color:white; 
+      text-decoration:none"
+        href="/">
+        Home</a>
+      </a>
+
+
+
+
     <% if (locals.error !=null){ %>
-<div style="color: red; margin-bottom: 1 rem;">
+<div style="color: red; margin-bottom: 25 px; font-weight: bold; background-color: white;">
   Incorrect Password
 </div>
     <% } %>
 
 
-    <form  method="post"  style="display: grid; gap: .5rem; grid-template-columns: auto 1fr; max-width: 500px; margin: 0 auto;">
+    <form  method="post"  
+    style="margin-top:1 rem; 
+    display: grid; 
+    gap: .5rem; 
+    grid-template-columns: auto 1fr; 
+    max-width: 500px; 
+    margin: 0 auto;">
+      
       <label for="password" required>Password: </label>
       <input type="password" id="password" name="password" required />
       <button style="grid-column: span 2 ;" type="submit">Download</button>
+
+      </div>
     </form>
   </body>
 </html>
